Fix overflow on chocolate name (dashboard)

--- a/backend/public/static/css/dashboard.css
+++ b/backend/public/static/css/dashboard.css
@@ -17,6 +17,7 @@ body {
     cursor: pointer;
     margin: 0 50px 100px 50px;
     width: 250px;
+    height: 100%;
     border: 1px solid #aaa;
     border-radius: 50px 0;
     transition: all .5s ease, border-radius 0s ease;
